Wrap JIRA links one per line (fixes #55)

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -80,3 +80,8 @@ span[data-toggle="popover"]:focus {
 .loading-icon {
     font-size: 36px;
 }
+
+.jira-links-list {
+  list-style: none;
+  padding-left:0;
+}
